{
    "name": "InputMap",
    "maps": [
        {
            "name": "Movement",
            "id": "b6e7f350-745c-40b8-a259-1bc52350bfbd",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "e5fef5f4-c2dc-4183-b38d-4a3953d472b9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchTap",
                    "type": "Value",
                    "id": "30d82f7f-46d9-4ab5-bea3-7fb7988b4790",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchSlowTap",
                    "type": "Value",
                    "id": "e28b2c1a-e156-455d-b881-86492d966200",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "SlowTap",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchHold",
                    "type": "Value",
                    "id": "98e1f701-be2b-443d-a70a-5d67c42787c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8950567b-aeb0-4b7b-a6f2-5dc1b40d72f9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "815d60eb-f51f-4546-b4c5-48d6b769d68c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5842da32-9e28-4768-b37f-15591931b10b",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchSlowTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4ba104d-cd05-4e4b-a753-d6ebdec1641a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}